*SVN*

* Add :env option to 'run' (and friends) so that you can specify environment variables to be injected into the new process' environment [Mathieu Lajugie]


*1.4.0* (February 3, 2007)

* Use the auth info for subversion more consistently [Jamis Buck]

* Add a "capture" helper, for capturing the stdout of a remote command and returning it as a string [Jamis Buck]

* Add a "get" helper, to pull a file from a remote server to the localhost [bmihelac]

* Fix gateway to actually increment local_port if a port is in use, so that multiple capistrano instances can run at the same time [Mark Imbriaco]

* Refactor the permissions tweaking in update_code to a separate task so that people on shared hosts can override it as necessary [jaw6]

* Set umask during the setup task, so that intermediate directories are created with the proper permissions [NeilW]

* Removed -c/--caprc switch, since the new load order renders it meaningless (just use -f now) [Mike Bailey]

* Make sure the standard recipe loads first, so that .caprc and friends can override what it defines. [Mike Bailey]

* Add support for a system-wide capistrano config file [Mike Bailey]

* Make cold_deploy call update instead of deploy (to avoid invoking the restart task).

* Make the touch command run by update_code set the TZ to UTC, for consistent setting of asset timestamps. [NeilW]

* Fix off-by-one bug in show_tasks width-computation [NeilW]


*1.3.1* (January 5, 2007)

* Fix connection problems when using gateways [Ezra Zygmuntowicz]


*1.3.0* (December 23, 2006)

* Deprecate rake integration in favor of invoking `cap' directly [Jamis Buck]

* Make sure the CVS module references the repository explicitly in cvs_log [weyus@att.net]

* Remove trace messages when loading a file [Jamis Buck]

* Cleaner error messages for authentication failures and command errors [Jamis Buck]

* Added support for ~/.caprc, also -x and -c switches. [Jamis Buck]
